--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -15,6 +15,7 @@
     "@middy/http-json-body-parser": "^1.5.2",
     "aws-xray-sdk": "^3.2.0",
     "bcrypt": "^5.0.1",
+    "dotenv": "^8.2.0",
     "fastest-validator": "^1.10.1",
     "jsonwebtoken": "^8.5.1",
     "serverless-dynamodb-local": "^0.2.39",
@@ -22,13 +23,19 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-typescript": "^7.13.0",
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/bcrypt": "^3.0.0",
+    "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.25",
     "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.874.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
     "serverless-iam-roles-per-function": "^3.1.0",
