Added integration test for the login function

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "jest --watch"
+    "test:unit": "jest --watch --testPathPattern=./src",
+    "test:integration": "jest --watch --testPathPattern=./test/integration"
   },
   "engines": {
     "node": ">=14.15.0"
